<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="180dp"
   android:background="#050370"
    android:padding="20dp"
    tools:ignore="ExtraText">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/La_currency"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_ID"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:text="@string/e_mail"/>

    <TextView
        android:id="@+id/name_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="#ffffff"
        android:textSize="14sp" />


</LinearLayout>